refactored the engines code

--- a/gui/res.qrc
+++ b/gui/res.qrc
@@ -3,6 +3,8 @@
         <file>res/icons/main.ico</file>
         <file>res/icons/folder.png</file>
         <file>res/icons/settings.png</file>
+        <file>res/icons/folder2.png</file>
+        <file>res/icons/green.png</file>
     </qresource>
     <qresource prefix="/files">
         <file>res/files/nameservers.txt</file>
