--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -7,14 +7,64 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>686</height>
+    <height>688</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Sub Suite</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QStatusBar {
+   <string notr="true">QScrollBar:vertical {
+        border-style: solid black;
+        border-width: 1px;
+        background-color: transparent;
+        width: 12px;
+}
+
+QScrollBar:horizontal {
+        border-style: solid black;
+        border-width: 1px;
+        background-color: transparent;
+        height: 12px;
+}
+
+QScrollBar::handle:vertical {
+        min-height: 17px;
+        background-color: rgb(81,81,81);
+}
+
+QScrollBar:handle:horizontal {
+        min-width: 17px;
+        background-color: rgb(81,81,81);
+}
+
+QScrollBar::handle:vertical:hover {
+        background-color: rgb(95,95,95);
+}
+
+QScrollBar:handle:horizontal:hover {
+        background-color: rgb(100,100,100);
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
+    background: transparent;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+    background: transparent;
+}
+
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical {
+    height: 0px;
+    width: 0px;
+}
+
+QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal {
+    height: 0px;
+    width: 0px;
+}
+
+QStatusBar {
     border-style: outset;
     border-width: 1px;
     border-top-color: grey;
@@ -94,6 +144,12 @@ QComboBox QWidget {
         selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(70, 70, 70, 255), stop:1 rgb(70, 81, 93));
 }
 
+QComboBox::drop-down {
+    border-left-width: 1px;
+    border-left-color: rgb(40,40,40);
+    border-left-style: solid;
+}
+
 /********** Line *************/
 QFrame[frameShape=&quot;4&quot;] {
     border: none;
@@ -107,7 +163,7 @@ QFrame[frameShape=&quot;5&quot;] {
 
 /********* QFrames **********/
 QFrame#frame, QFrame#frame_newSpecialWordlist, QFrame#frame_nameservers {
-        background-color:rgb(68, 68, 68);
+        background-color:rgb(67, 67, 67);
 }
 
 /******** QLabels ***********/
@@ -118,7 +174,7 @@ QLabel#label_resultsCount, QLabel#label_targetsCount, QLabel#label_wordlistCount
 QScrollArea {
     border-style: outset;
     border-style: solid;
-    border-color: rgb(50,50,50);
+    border-color: rgb(40,40,40);
     border-width: 1px;
 }
 
@@ -127,11 +183,11 @@ QAbstractScrollArea {
 }
 
 QScrollArea QWidget {
-        background-color:rgb(68, 68, 68);
+        background-color:rgb(66, 66, 66);
 }
 
 QMainWindow {
-        background-color:rgb(82,82,82);
+        background-color:rgb(80,80,80);
 }
 
 QDialog {
@@ -140,28 +196,6 @@ QDialog {
 
 QLabel {
         color:rgb(0,0,0);
-}
-
-QScrollBar:vertical {
-        border-style: solid;
-        border-color: black;
-        background-color:rgb(65, 65, 65);
-        width: 15px;
-}
-
-QScrollBar:horizontal {
-        border-style: solid;
-        border-color: black;
-        background-color:rgb(65, 65, 65);
-        height: 15px;
-}
-
-QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
-    background: rgb(80,80,80);
-}
-
-QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
-    background: rgb(80,80,80);
 }
 
 QSplitter::handle:horizontal {
@@ -174,7 +208,7 @@ QSplitter::handle:vertical{
         height: 5px
 }
 
-QListWidget, QTreeView, QTableView{
+QListWidget, QTreeView, QTableView, QColumnView{
         selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(40, 51, 63));
         background-color:rgb(50, 50, 50);
         color: rgb(230,230,230);
@@ -183,11 +217,13 @@ QListWidget, QTreeView, QTableView{
         border-width: 1px;
 }
 
-QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected{
+/*
+QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected, QColumnView::item:selected{
         background-color: rgb(50, 61, 73);
 }
+*/
 
-QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover {
+QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover, QColumnView::item:hover, QColumnView::item:hover {
         background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(60, 71, 83));
 }
 
@@ -280,7 +316,7 @@ QProgressBar::chunk {
 }
 
 QMenuBar {
-        background: rgb(82, 82, 82);
+        background: rgb(80, 80, 80);
 }
 
 QMenu {
@@ -291,7 +327,7 @@ QMenu {
 }
 
 QMenuBar::item {
-        color:rgb(210,210,210);
+        color:rgb(250,250,250);
         spacing: 3px;
         padding: 1px 4px;
         background: transparent;
@@ -414,7 +450,7 @@ QRadioButton:hover {
      <number>0</number>
     </property>
     <property name="topMargin">
-     <number>0</number>
+     <number>2</number>
     </property>
     <property name="rightMargin">
      <number>0</number>
