--- a/gui/src/engines/dns/DnsRecords.ui
+++ b/gui/src/engines/dns/DnsRecords.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dns</class>
- <widget class="QWidget" name="Dns">
+ <class>DnsRecords</class>
+ <widget class="QWidget" name="DnsRecords">
   <property name="geometry">
    <rect>
     <x>0</x>
