--- a/gui/src/project/Project.ui
+++ b/gui/src/project/Project.ui
@@ -141,6 +141,18 @@
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>20</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>20</height>
+             </size>
+            </property>
             <item>
              <property name="text">
               <string>HostName</string>
@@ -217,7 +229,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Results Scope Settings...</string>
+          <string>Project result's Scope &amp; Settings...</string>
          </property>
         </widget>
        </item>
@@ -237,6 +249,20 @@
        </item>
        <item>
         <widget class="Line" name="line_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="checkBox_groupInLevels">
+         <property name="text">
+          <string>Group in Levels</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_4">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
